# messeger

./: CMakeLists.txt  README.md  requirements.txt
app/: client.py  main.py
bindings/: CMakeLists.txt  auth_module.cpp  crypto_module.cpp
core/: CMakeLists.txt
core/include/: auth.h  crypto.h
core/src/: auth.cpp  crypto.cpp
tests/: CMakeLists.txt  test_auth.cpp  test_bindings.py
