cmake_minimum_required(VERSION 3.15)
project(secure_core LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall -Wextra")

include(FetchContent)
FetchContent_Declare(
  pybind11
  GIT_REPOSITORY https://github.com/pybind/pybind11.git
  GIT_TAG v2.11.0
)
FetchContent_MakeAvailable(pybind11)

find_package(OpenSSL REQUIRED)

add_library(secure_core SHARED
  src/auth.cpp
  src/crypto.cpp
)

target_include_directories(secure_core
  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_link_libraries(secure_core
  PRIVATE OpenSSL::SSL OpenSSL::Crypto pybind11::module
)
